--- a/views/genre_form.pug
+++ b/views/genre_form.pug
@@ -6,8 +6,9 @@ block content
     form(method='POST' action='')
         div.form-group
             label(for='name') Genre: 
-            input#name.form-control(type='text', placeholder='Fantasy, Poetry, etc.', name='name', value=(undefined===genre? '' : genre.name))
-            button.btn.btn-primary(type='submit') Submit
+            input#name.form-control(type='text', placeholder='Fantasy, Poetry, etc.', name='name', value=(undefined===genre? '' : genre.name), required:'true')
+            
+        button.btn.btn-primary(type='submit') Submit
 
     if errors
         ul
